--- a/index.html
+++ b/index.html
@@ -5,19 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Management Dashboard</title>
     <link href="css/navbar.css" rel="stylesheet" />
+    <link href="css/sidebar.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
   </head>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"></script>
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+  />
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <!-- Navbar Brand (left-aligned) -->
-        <a class="navbar-brand" href="#">Navbar</a>
+        <!-- Offcanvas toggle button (left-aligned) -->
+        <button
+          class="btn btn-hamburger"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasSidebar"
+          aria-controls="offcanvasSidebar"
+        >
+          <i class="bi bi-list"></i>
+          <!-- Bootstrap icon for hamburger menu -->
+        </button>
 
         <!-- Navbar Toggle Button for Mobile View -->
         <button
@@ -78,5 +97,77 @@
         </div>
       </div>
     </nav>
+
+    <!-- Offcanvas Sidebar (Left-aligned) -->
+    <div
+      class="offcanvas offcanvas-start"
+      tabindex="-1"
+      id="offcanvasSidebar"
+      aria-labelledby="offcanvasSidebarLabel"
+    >
+      <div class="offcanvas-body">
+        <div class="split-container">
+          <!-- Left side -->
+          <div class="left-section">
+            <a class="sidebar-logo-left" href="#">
+              <img src="/images/logo1.png" alt="Logo" class="logo-left-img" />
+              <!-- Bootstrap img-fluid class for responsiveness -->
+            </a>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <a href="#">
+                  <img
+                    src="/images/home.png"
+                    alt="Dashboard Icon"
+                    class="menu-icon"
+                  />
+                  Dashboard
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="#">
+                  <img
+                    src="/images/settings.png"
+                    alt="Settings Icon"
+                    class="menu-icon"
+                  />
+                  Settings
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="#">
+                  <img
+                    src="/images/profile.png"
+                    alt="Profile Icon"
+                    class="menu-icon"
+                  />
+                  Profile
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="#">
+                  <img
+                    src="/images/logout.png"
+                    alt="Logout Icon"
+                    class="menu-icon"
+                  />
+                  Logout
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Right side -->
+          <div class="right-section">
+            <ul class="list-group">
+              <li class="list-group-item"><a href="#">Support</a></li>
+              <li class="list-group-item"><a href="#">Help</a></li>
+              <li class="list-group-item"><a href="#">Feedback</a></li>
+              <li class="list-group-item"><a href="#">Terms & Policies</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
