--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Car Management Dashboard</title>
     <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/sidebar.css" rel="stylesheet" />
+    <link href="css/list-cars.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -169,5 +170,234 @@
         </div>
       </div>
     </div>
+
+    <section class="list-cars py-5">
+      <div class="container">
+        <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Cars</a></li>
+            <li class="breadcrumb-item active" aria-current="page">List Car</li>
+          </ol>
+        </nav>
+
+        <div class="mb-4 d-flex justify-content-between align-items-center">
+          <h1 class="list-car__title">List Car</h1>
+          <button class="btn btn-add-car">
+            <img src="/images/plus.png" alt="Plus Icon" class="add-car-icon" />
+            Add New Car
+          </button>
+        </div>
+
+        <div class="mb-4">
+          <button class="btn btn-all-cars">All</button>
+          <button class="btn btn-small-cars">Small</button>
+          <button class="btn btn-medium-cars">Medium</button>
+          <button class="btn btn-large-cars">Large</button>
+        </div>
+
+        <div class="row g-5 justify-content-center" id="list-car-content">
+          <div class="col-md-4">
+            <!-- Ubah ukuran kolom agar lebih responsif -->
+            <div class="card" style="width: 100%">
+              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <div class="card-body">
+                <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
+                <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
+                <p class="card-text" id="update-car">
+                  <img
+                    src="/images/clock1.png"
+                    class="update-car-icon"
+                    alt="update"
+                  />
+                  Updated at 4 Apr 2022, 09.00
+                </p>
+                <button class="btn btn-delete-car">
+                  <img
+                    src="/images/delete1.png"
+                    class="delete-car-icon"
+                    alt="delete"
+                  />
+                  Delete
+                </button>
+                <button class="btn btn-edit-car">
+                  <img
+                    src="/images/update1.png"
+                    class="edit-car-icon"
+                    alt="edit"
+                  />
+                  Edit
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Duplicate card example -->
+          <div class="col-md-4">
+            <div class="card" style="width: 100%">
+              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <div class="card-body">
+                <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
+                <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
+                <p class="card-text" id="update-car">
+                  <img
+                    src="/images/clock1.png"
+                    class="update-car-icon"
+                    alt="update"
+                  />
+                  Updated at 4 Apr 2022, 09.00
+                </p>
+                <button class="btn btn-delete-car">
+                  <img
+                    src="/images/delete1.png"
+                    class="delete-car-icon"
+                    alt="delete"
+                  />
+                  Delete
+                </button>
+                <button class="btn btn-edit-car">
+                  <img
+                    src="/images/update1.png"
+                    class="edit-car-icon"
+                    alt="edit"
+                  />
+                  Edit
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 100%">
+              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <div class="card-body">
+                <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
+                <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
+                <p class="card-text" id="update-car">
+                  <img
+                    src="/images/clock1.png"
+                    class="update-car-icon"
+                    alt="update"
+                  />
+                  Updated at 4 Apr 2022, 09.00
+                </p>
+                <button class="btn btn-delete-car">
+                  <img
+                    src="/images/delete1.png"
+                    class="delete-car-icon"
+                    alt="delete"
+                  />
+                  Delete
+                </button>
+                <button class="btn btn-edit-car">
+                  <img
+                    src="/images/update1.png"
+                    class="edit-car-icon"
+                    alt="edit"
+                  />
+                  Edit
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 100%">
+              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <div class="card-body">
+                <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
+                <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
+                <p class="card-text" id="update-car">
+                  <img
+                    src="/images/clock1.png"
+                    class="update-car-icon"
+                    alt="update"
+                  />
+                  Updated at 4 Apr 2022, 09.00
+                </p>
+                <button class="btn btn-delete-car">
+                  <img
+                    src="/images/delete1.png"
+                    class="delete-car-icon"
+                    alt="delete"
+                  />
+                  Delete
+                </button>
+                <button class="btn btn-edit-car">
+                  <img
+                    src="/images/update1.png"
+                    class="edit-car-icon"
+                    alt="edit"
+                  />
+                  Edit
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 100%">
+              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <div class="card-body">
+                <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
+                <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
+                <p class="card-text" id="update-car">
+                  <img
+                    src="/images/clock1.png"
+                    class="update-car-icon"
+                    alt="update"
+                  />
+                  Updated at 4 Apr 2022, 09.00
+                </p>
+                <button class="btn btn-delete-car">
+                  <img
+                    src="/images/delete1.png"
+                    class="delete-car-icon"
+                    alt="delete"
+                  />
+                  Delete
+                </button>
+                <button class="btn btn-edit-car">
+                  <img
+                    src="/images/update1.png"
+                    class="edit-car-icon"
+                    alt="edit"
+                  />
+                  Edit
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card" style="width: 100%">
+              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <div class="card-body">
+                <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
+                <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
+                <p class="card-text" id="update-car">
+                  <img
+                    src="/images/clock1.png"
+                    class="update-car-icon"
+                    alt="update"
+                  />
+                  Updated at 4 Apr 2022, 09.00
+                </p>
+                <button class="btn btn-delete-car">
+                  <img
+                    src="/images/delete1.png"
+                    class="delete-car-icon"
+                    alt="delete"
+                  />
+                  Delete
+                </button>
+                <button class="btn btn-edit-car">
+                  <img
+                    src="/images/update1.png"
+                    class="edit-car-icon"
+                    alt="edit"
+                  />
+                  Edit
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
