--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Management Dashboard</title>
-    <link href="css/navbar.css" rel="stylesheet" />
+    <!-- <link href="css/navbar.css" rel="stylesheet" />
     <link href="css/sidebar.css" rel="stylesheet" />
+    -->
     <link href="css/list-cars.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -15,161 +16,202 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
     />
+
+    <style>
+      * {
+        /* border: 1px solid red; */
+      }
+    </style>
   </head>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"></script>
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-  />
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <!-- Offcanvas toggle button (left-aligned) -->
-        <button
-          class="btn btn-hamburger"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#offcanvasSidebar"
-          aria-controls="offcanvasSidebar"
-        >
-          <i class="bi bi-list"></i>
-          <!-- Bootstrap icon for hamburger menu -->
-        </button>
+    <nav class="navbar bg-body-tertiary fixed-top">
+      <div class="container d-flex flex-row-reverse">
+        <div class="d-flex gap-2">
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-primary" type="submit">
+              Search
+            </button>
+          </form>
+          <div class="dropdown">
+            <button
+              class="btn dropdown-toggle d-flex align-items-center gap-2"
+              type="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              <div
+                class="logo-user rounded-circle d-flex justify-content-center align-items-center"
+                style="height: 2rem; width: 2rem; background: #cfd4ed"
+              >
+                U
+              </div>
+              Username
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div>
+        </div>
 
-        <!-- Navbar Toggle Button for Mobile View -->
         <button
           class="navbar-toggler"
           type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasNavbar"
+          aria-controls="offcanvasNavbar"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <!-- Everything else (right-aligned) -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-            <!-- Search Form -->
-            <div class="search-box">
-              <form class="d-flex me-4">
-                <input
-                  class="form-control me-2"
-                  type="search"
-                  placeholder="Search"
-                  aria-label="Search"
-                />
-                <button class="btn btn-outline-success" type="submit">
-                  Search
-                </button>
-              </form>
-            </div>
+        <div
+          class="offcanvas offcanvas-start"
+          tabindex="-1"
+          id="offcanvasNavbar"
+          aria-labelledby="offcanvasNavbarLabel"
+        >
+          <div class="row p-0 m-0 h-100 w-100">
+            <div
+              class="col-2 h-100 d-flex flex-column justify-content-start pt-3 row-gap-4 p-0 m-0"
+              style="background: #0d28a6"
+            >
+              <div class="w-100 flex-column px-3">
+                <div
+                  class="w-100"
+                  style="height: 2rem; background: #cfd4ed"
+                ></div>
+              </div>
 
-            <!-- Dropdown Menu -->
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Username
-              </a>
               <ul
-                class="dropdown-menu dropdown-menu-end"
-                aria-labelledby="navbarDropdown"
+                style="list-style: none"
+                class="container-fluid d-flex flex-column w-100 p-0 m-0"
               >
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
+                <li class="d-flex justify-content-center w-100 p-1">
+                  <a
+                    href="#"
+                    class="d-flex flex-column justify-content-center align-items-center row-gap-1 text-decoration-none text-white p-2"
+                  >
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M3 9L12 2L21 9V20C21 20.5304 20.7893 21.0391 20.4142 21.4142C20.0391 21.7893 19.5304 22 19 22H5C4.46957 22 3.96086 21.7893 3.58579 21.4142C3.21071 21.0391 3 20.5304 3 20V9Z"
+                        stroke="white"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                      <path
+                        d="M9 22V12H15V22"
+                        stroke="white"
+                        stroke-width="2"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      />
+                    </svg>
+
+                    <span style="font-size: 0.75rem">Dashboard </span>
+                  </a>
+                </li>
+                <li
+                  class="w-auto d-flex flex-column justify-content-center align-items-center row-gap-1 text-decoration-none text-white p-2"
+                  style="background: #cfd4ed"
+                >
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M18.5 21C19.8807 21 21 19.8807 21 18.5C21 17.1193 19.8807 16 18.5 16C17.1193 16 16 17.1193 16 18.5C16 19.8807 17.1193 21 18.5 21Z"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M5.5 21C6.88071 21 8 19.8807 8 18.5C8 17.1193 6.88071 16 5.5 16C4.11929 16 3 17.1193 3 18.5C3 19.8807 4.11929 21 5.5 21Z"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M16 8H20L23 11V16H16V8Z"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                    <path
+                      d="M16 3H1V16H16V3Z"
+                      stroke="white"
+                      stroke-width="2"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    />
+                  </svg>
+
+                  <span style="font-size: 0.75rem">List Cars</span>
                 </li>
               </ul>
-            </li>
-          </ul>
+            </div>
+            <div
+              class="col-10 h-100 d-flex flex-column justify-content-start pt-3 row-gap-4 p-0 m-0"
+            >
+              <div class="w-100 flex-column px-3">
+                <div
+                  class="w-25"
+                  style="height: 2rem; background: #cfd4ed"
+                ></div>
+              </div>
+
+              <ul
+                style="list-style: none"
+                class="container-fluid d-flex flex-column w-100 p-0 m-0 row-gap-3"
+              >
+                <li
+                  class="nav-item py-3 d-flex align-content-center p-0"
+                >
+                  <a
+                    class="nav-link active d-flex align-items-center px-3"
+                    aria-current="page"
+                    href="#"
+                    >Dashboard</a
+                  >
+                </li>
+                <li
+                  class="nav-item py-3 d-flex align-content-center"
+                  style="background: #cfd4ed"
+                >
+                  <a
+                    class="nav-link active d-flex align-items-center px-3"
+                    aria-current="page"
+                    href="#"
+                    >List Cars</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </nav>
-
-    <!-- Offcanvas Sidebar (Left-aligned) -->
-    <div
-      class="offcanvas offcanvas-start"
-      tabindex="-1"
-      id="offcanvasSidebar"
-      aria-labelledby="offcanvasSidebarLabel"
-    >
-      <div class="offcanvas-body">
-        <div class="split-container">
-          <!-- Left side -->
-          <div class="left-section">
-            <a class="sidebar-logo-left" href="#">
-              <img src="/images/logo1.png" alt="Logo" class="logo-left-img" />
-              <!-- Bootstrap img-fluid class for responsiveness -->
-            </a>
-            <ul class="list-group">
-              <li class="list-group-item">
-                <a href="#">
-                  <img
-                    src="/images/home.png"
-                    alt="Dashboard Icon"
-                    class="menu-icon"
-                  />
-                  Dashboard
-                </a>
-              </li>
-              <li class="list-group-item">
-                <a href="#">
-                  <img
-                    src="/images/settings.png"
-                    alt="Settings Icon"
-                    class="menu-icon"
-                  />
-                  Settings
-                </a>
-              </li>
-              <li class="list-group-item">
-                <a href="#">
-                  <img
-                    src="/images/profile.png"
-                    alt="Profile Icon"
-                    class="menu-icon"
-                  />
-                  Profile
-                </a>
-              </li>
-              <li class="list-group-item">
-                <a href="#">
-                  <img
-                    src="/images/logout.png"
-                    alt="Logout Icon"
-                    class="menu-icon"
-                  />
-                  Logout
-                </a>
-              </li>
-            </ul>
-          </div>
-
-          <!-- Right side -->
-          <div class="right-section">
-            <ul class="list-group">
-              <li class="list-group-item"><a href="#">Support</a></li>
-              <li class="list-group-item"><a href="#">Help</a></li>
-              <li class="list-group-item"><a href="#">Feedback</a></li>
-              <li class="list-group-item"><a href="#">Terms & Policies</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <section class="list-cars py-5">
       <div class="container">
@@ -522,5 +564,9 @@
         </div>
       </div>
     </section>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
