add: addNewcar, updateCar

--- a/index.html
+++ b/index.html
@@ -185,9 +185,7 @@
                 style="list-style: none"
                 class="container-fluid d-flex flex-column w-100 p-0 m-0 row-gap-3"
               >
-                <li
-                  class="nav-item py-3 d-flex align-content-center p-0"
-                >
+                <li class="nav-item py-3 d-flex align-content-center p-0">
                   <a
                     class="nav-link active d-flex align-items-center px-3"
                     aria-current="page"
@@ -225,8 +223,10 @@
         <div class="mb-4 d-flex justify-content-between align-items-center">
           <h1 class="list-car__title">List Car</h1>
           <button class="btn btn-add-car">
-            <img src="/images/plus.png" alt="Plus Icon" class="add-car-icon" />
-            Add New Car
+            <a href="addNewCars.html" class="text-decoration-none text-white">
+              <img src="images/plus.png" alt="Plus Icon" class="add-car-icon" />
+              Add New Car
+            </a>
           </button>
         </div>
 
@@ -241,13 +241,13 @@
           <div class="col-md-4">
             <!-- Ubah ukuran kolom agar lebih responsif -->
             <div class="card" style="width: 100%">
-              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <img class="image-content" src="images/car.png" alt="mobil" />
               <div class="card-body">
                 <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
                 <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
                 <p class="card-text" id="update-car">
                   <img
-                    src="/images/clock1.png"
+                    src="images/clock1.png"
                     class="update-car-icon"
                     alt="update"
                   />
@@ -260,19 +260,24 @@
                   data-bs-target="#modal-delete"
                 >
                   <img
-                    src="/images/delete1.png"
+                    src="images/delete1.png"
                     class="delete-car-icon"
                     alt="delete"
                   />
                   Delete
                 </button>
                 <button class="btn btn-edit-car">
-                  <img
-                    src="/images/update1.png"
-                    class="edit-car-icon"
-                    alt="edit"
-                  />
-                  Edit
+                  <a
+                    href="updateCars.html"
+                    class="text-decoration-none text-white"
+                  >
+                    <img
+                      src="images/update1.png"
+                      class="edit-car-icon"
+                      alt="edit"
+                    />
+                    Edit
+                  </a>
                 </button>
               </div>
             </div>
@@ -282,13 +287,13 @@
           <div class="col-md-4">
             <!-- Ubah ukuran kolom agar lebih responsif -->
             <div class="card" style="width: 100%">
-              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <img class="image-content" src="images/car.png" alt="mobil" />
               <div class="card-body">
                 <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
                 <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
                 <p class="card-text" id="update-car">
                   <img
-                    src="/images/clock1.png"
+                    src="images/clock1.png"
                     class="update-car-icon"
                     alt="update"
                   />
@@ -301,7 +306,7 @@
                   data-bs-target="#modal-delete"
                 >
                   <img
-                    src="/images/delete1.png"
+                    src="images/delete1.png"
                     class="delete-car-icon"
                     alt="delete"
                   />
@@ -309,7 +314,7 @@
                 </button>
                 <button class="btn btn-edit-car">
                   <img
-                    src="/images/update1.png"
+                    src="images/update1.png"
                     class="edit-car-icon"
                     alt="edit"
                   />
@@ -321,13 +326,13 @@
           <div class="col-md-4">
             <!-- Ubah ukuran kolom agar lebih responsif -->
             <div class="card" style="width: 100%">
-              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <img class="image-content" src="images/car.png" alt="mobil" />
               <div class="card-body">
                 <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
                 <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
                 <p class="card-text" id="update-car">
                   <img
-                    src="/images/clock1.png"
+                    src="images/clock1.png"
                     class="update-car-icon"
                     alt="update"
                   />
@@ -340,7 +345,7 @@
                   data-bs-target="#modal-delete"
                 >
                   <img
-                    src="/images/delete1.png"
+                    src="images/delete1.png"
                     class="delete-car-icon"
                     alt="delete"
                   />
@@ -348,7 +353,7 @@
                 </button>
                 <button class="btn btn-edit-car">
                   <img
-                    src="/images/update1.png"
+                    src="images/update1.png"
                     class="edit-car-icon"
                     alt="edit"
                   />
@@ -360,13 +365,13 @@
           <div class="col-md-4">
             <!-- Ubah ukuran kolom agar lebih responsif -->
             <div class="card" style="width: 100%">
-              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <img class="image-content" src="images/car.png" alt="mobil" />
               <div class="card-body">
                 <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
                 <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
                 <p class="card-text" id="update-car">
                   <img
-                    src="/images/clock1.png"
+                    src="images/clock1.png"
                     class="update-car-icon"
                     alt="update"
                   />
@@ -379,7 +384,7 @@
                   data-bs-target="#modal-delete"
                 >
                   <img
-                    src="/images/delete1.png"
+                    src="images/delete1.png"
                     class="delete-car-icon"
                     alt="delete"
                   />
@@ -387,7 +392,7 @@
                 </button>
                 <button class="btn btn-edit-car">
                   <img
-                    src="/images/update1.png"
+                    src="images/update1.png"
                     class="edit-car-icon"
                     alt="edit"
                   />
@@ -399,13 +404,13 @@
           <div class="col-md-4">
             <!-- Ubah ukuran kolom agar lebih responsif -->
             <div class="card" style="width: 100%">
-              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <img class="image-content" src="images/car.png" alt="mobil" />
               <div class="card-body">
                 <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
                 <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
                 <p class="card-text" id="update-car">
                   <img
-                    src="/images/clock1.png"
+                    src="images/clock1.png"
                     class="update-car-icon"
                     alt="update"
                   />
@@ -418,7 +423,7 @@
                   data-bs-target="#modal-delete"
                 >
                   <img
-                    src="/images/delete1.png"
+                    src="images/delete1.png"
                     class="delete-car-icon"
                     alt="delete"
                   />
@@ -426,7 +431,7 @@
                 </button>
                 <button class="btn btn-edit-car">
                   <img
-                    src="/images/update1.png"
+                    src="images/update1.png"
                     class="edit-car-icon"
                     alt="edit"
                   />
@@ -438,13 +443,13 @@
           <div class="col-md-4">
             <!-- Ubah ukuran kolom agar lebih responsif -->
             <div class="card" style="width: 100%">
-              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <img class="image-content" src="images/car.png" alt="mobil" />
               <div class="card-body">
                 <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
                 <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
                 <p class="card-text" id="update-car">
                   <img
-                    src="/images/clock1.png"
+                    src="images/clock1.png"
                     class="update-car-icon"
                     alt="update"
                   />
@@ -457,7 +462,7 @@
                   data-bs-target="#modal-delete"
                 >
                   <img
-                    src="/images/delete1.png"
+                    src="images/delete1.png"
                     class="delete-car-icon"
                     alt="delete"
                   />
@@ -465,7 +470,7 @@
                 </button>
                 <button class="btn btn-edit-car">
                   <img
-                    src="/images/update1.png"
+                    src="images/update1.png"
                     class="edit-car-icon"
                     alt="edit"
                   />
@@ -477,13 +482,13 @@
           <div class="col-md-4">
             <!-- Ubah ukuran kolom agar lebih responsif -->
             <div class="card" style="width: 100%">
-              <img class="image-content" src="/images/car.png" alt="mobil" />
+              <img class="image-content" src="images/car.png" alt="mobil" />
               <div class="card-body">
                 <h5 class="card-title" id="title-car">Nama/Tipe Mobil</h5>
                 <p class="card-text" id="rent-car">Rp 430.000 / Hari</p>
                 <p class="card-text" id="update-car">
                   <img
-                    src="/images/clock1.png"
+                    src="images/clock1.png"
                     class="update-car-icon"
                     alt="update"
                   />
@@ -496,7 +501,7 @@
                   data-bs-target="#modal-delete"
                 >
                   <img
-                    src="/images/delete1.png"
+                    src="images/delete1.png"
                     class="delete-car-icon"
                     alt="delete"
                   />
@@ -504,7 +509,7 @@
                 </button>
                 <button class="btn btn-edit-car">
                   <img
-                    src="/images/update1.png"
+                    src="images/update1.png"
                     class="edit-car-icon"
                     alt="edit"
                   />
@@ -532,7 +537,7 @@
                 <div
                   class="container d-flex flex-column justify-content-center align-items-center gap-2 p-2 text-center"
                 >
-                  <img src="/images/img-BeepBeep.png" alt="" />
+                  <img src="images/img-BeepBeep.png" alt="" />
                   <h4>Menghapus Data Mobil</h4>
                   <p>
                     Setelah dihapus, data mobil tidak dapat dikembalikan. Yakin
